forked from gigx-slides 0.3, changed namespace and filenames to gigx-sponsors-slides

--- a/css/gigx-sponsors-slides-sort.css
+++ b/css/gigx-sponsors-slides-sort.css
@@ -1,6 +1,6 @@
-#gigx-slides-list { margin-top: 20px; }
+#gigx-sponsors-slides-list { margin-top: 20px; }
  
-	#gigx-slides-list li {
+	#gigx-sponsors-slides-list li {
 		padding: 10px;	
 		width: 50%;	
 		font-weight: bold;
