--- a/css/style.css
+++ b/css/style.css
@@ -4,33 +4,33 @@ CSS for the gallery widget
 
 
 /* general slideshow styles */
-.gigx-slideshow{
+.gigx-sponsors-slideshow{
     background-color:#486D25;
     padding:10px; 
     border-radius: 5px;
     -moz-border-radius: 5px;     
 }
 
-.gigx-slideshow-wrapper {
+.gigx-sponsors-slideshow-wrapper {
   	margin: 0;  
     padding: 0; 
     text-align: left;
     width: 720px;
-    height: 225px;  
+    height: 100px;  
 }
 
-.gigx-slideshow-wrapper h2 {
+.gigx-sponsors-slideshow-wrapper h2 {
     color:#FFFFFF;
     font:1.6em Arial,Tahoma,sans-serif;
     margin: 0.8em 0 0.4em;
     width: 390px;
 }
-.gigx-slideshow-wrapper h1 {
+.gigx-sponsors-slideshow-wrapper h1 {
     color:#FFFFFF;
     font:1.6em Arial,Tahoma,sans-serif;
     margin: 0.8em 0 0.4em;
 }
-.gigx-slideshow-wrapper p{
+.gigx-sponsors-slideshow-wrapper p{
     color:#FFFFFF;
     font-weight:bold;
     margin:0.75em 30px 0 0;
@@ -39,7 +39,7 @@ CSS for the gallery widget
 
 
 /* single slide styles */
-.gigx-slideshow-wrapper .gigx-slide{
+.gigx-sponsors-slideshow-wrapper .gigx-sponsors-slide{
     background-color:#83AE2C;
     color:#333333;
     /*margin-bottom:10px; */
@@ -59,15 +59,15 @@ CSS for the gallery widget
     
 }
 
-.gigx-slideshow-wrapper div.gigx-slide1 {
+.gigx-sponsors-slideshow-wrapper div.gigx-sponsors-slide1 {
   	display:block;
 }
 
-.gigx-slideshow-wrapper .gigx-slide .gigx-slide-text {
+.gigx-sponsors-slideshow-wrapper .gigx-sponsors-slide .gigx-sponsors-slide-text {
 width:400px;
 float:left;
 }
-.gigx-slideshow-wrapper .gigx-slide img {
+.gigx-sponsors-slideshow-wrapper .gigx-sponsors-slide img {
   	display: inline; 
     margin: 0; 
     padding:0 0 0 10px;
@@ -76,7 +76,7 @@ float:left;
 
 
 /* slideshow tabs  styles */
-.gigx-slideshow-pager {
+.gigx-sponsors-slideshow-pager {
     background: none repeat scroll 0 0 transparent;
     float: left;
     margin: 0;
@@ -84,7 +84,7 @@ float:left;
     /*height: 26px;*/  
     height:2.2em; 
 }
-.gigx-slideshow-pagerbutton {
+.gigx-sponsors-slideshow-pagerbutton {
     float: left;
     list-style-type: none;
     margin: 0 2px 0 0 !important;
@@ -103,7 +103,7 @@ float:left;
   background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #445533),color-stop(1, #56822c)); 
      
 }
-.gigx-slideshow-pagerbutton a {
+.gigx-sponsors-slideshow-pagerbutton a {
     /*background: no-repeat scroll right top #486D25;*/
     color: #FFFFFF;
     display: block;
@@ -116,12 +116,12 @@ float:left;
     height:1.6em; 
 }
 
-.gigx-slideshow-pagerbutton a:hover {
+.gigx-sponsors-slideshow-pagerbutton a:hover {
     text-decoration: none;
 }
 
 
-.gigx-slideshow-pager li.activeSlide {
+.gigx-sponsors-slideshow-pager li.activeSlide {
     background: no-repeat scroll right top #83AE2C;
     color: #fff;
     font-weight: bold;
