--- a/css/style.css
+++ b/css/style.css
@@ -5,132 +5,159 @@ CSS for the gallery widget
 
 /* general slideshow styles */
 .gigx-sponsors-slideshow{
+    clear: both;
+    width: 100%;
     background-color:#486D25;
-    padding:10px; 
+    padding:0px 10px 20px 10px; 
     border-radius: 5px;
-    -moz-border-radius: 5px;     
+    -moz-border-radius: 5px;    
+    -moz-box-shadow: 5px 5px 5px #333; 
+    -webkit-box-shadow: 5px 5px 5px #333; 
+    box-shadow: 5px 5px 5px #333;
+    background-image: -moz-linear-gradient(top, #445533, #56822c); 
+    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #445533),color-stop(1, #56822c)); 
+display: none;       
 }
 
+.gigx-sponsors-slideshow .widget-title{
+text-align:right;
+font-family: 'HarabaraRegular',Arial,sans-serif;
+	font-size: 20px;
+	text-decoration: none;
+  letter-spacing: 2px;
+  background-color: transparent;
+  
+}
 .gigx-sponsors-slideshow-wrapper {
-  	margin: 0;  
+  	margin: 0 auto 0 auto;  
     padding: 0; 
-    text-align: left;
-    width: 720px;
-    height: 100px;  
-}
-
-.gigx-sponsors-slideshow-wrapper h2 {
-    color:#FFFFFF;
-    font:1.6em Arial,Tahoma,sans-serif;
-    margin: 0.8em 0 0.4em;
-    width: 390px;
-}
-.gigx-sponsors-slideshow-wrapper h1 {
-    color:#FFFFFF;
-    font:1.6em Arial,Tahoma,sans-serif;
-    margin: 0.8em 0 0.4em;
-}
-.gigx-sponsors-slideshow-wrapper p{
-    color:#FFFFFF;
-    font-weight:bold;
-    margin:0.75em 30px 0 0;
-}
-
-
-
-/* single slide styles */
-.gigx-sponsors-slideshow-wrapper .gigx-sponsors-slide{
-    background-color:#83AE2C;
-    color:#333333;
-    /*margin-bottom:10px; */
-    overflow:hidden;
-    padding:0px 0px 0px 10px;
-    display:none;
-    border-radius: 5px 5px 0 0 ;
-    -moz-border-radius: 5px 5px 0 0; 
-    
-
-  background-color: #769d28;
-  background-image: -moz-linear-gradient(top, #769d28, #83AE2C); 
-  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #769d28),color-stop(1, #83AE2C)); 
-            filter:  progid:DXImageTransform.Microsoft.gradient(startColorStr='#769d28', EndColorStr='#83AE2C'); 
-        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#769d28', EndColorStr='#83AE2C')"; 
-
+    text-align: center;
+    width: 840px;
     
 }
-
-.gigx-sponsors-slideshow-wrapper div.gigx-sponsors-slide1 {
-  	display:block;
+.gigx-sponsors-slideshow-wrapper li{
+margin:0;
+padding:0;
+width:280px;
+text-align:center;
+display: table;
+}
+.gigx-sponsors-slideshow-wrapper a{
+margin:0;
+padding:0;
+display: table-cell; vertical-align: middle;
+}
+.gigx-sponsors-slideshow-wrapper li a img{
+margin:0;
+padding:0;
+border:0;
 }
 
-.gigx-sponsors-slideshow-wrapper .gigx-sponsors-slide .gigx-sponsors-slide-text {
-width:400px;
-float:left;
-}
-.gigx-sponsors-slideshow-wrapper .gigx-sponsors-slide img {
-  	display: inline; 
-    margin: 0; 
-    padding:0 0 0 10px;
-    float: right; text-align: right;
-}
-
-
-/* slideshow tabs  styles */
-.gigx-sponsors-slideshow-pager {
-    background: none repeat scroll 0 0 transparent;
-    float: left;
-    margin: 0;
-    padding: 0; 
-    /*height: 26px;*/  
-    height:2.2em; 
-}
-.gigx-sponsors-slideshow-pagerbutton {
-    float: left;
-    list-style-type: none;
-    margin: 0 2px 0 0 !important;
-    padding: 0;
-    background: no-repeat scroll right top #56822c;
-    border-radius: 0px 0px 5px 5px;
-    -moz-border-radius: 0px 0px 5px 5px;
-
-
-     -moz-box-shadow: 5px 5px 5px #333; 
-  -webkit-box-shadow: 5px 5px 5px #333; 
-          box-shadow: 5px 5px 5px #333;
-          
-
-  background-image: -moz-linear-gradient(top, #445533, #56822c); 
-  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #445533),color-stop(1, #56822c)); 
-     
-}
-.gigx-sponsors-slideshow-pagerbutton a {
-    /*background: no-repeat scroll right top #486D25;*/
-    color: #FFFFFF;
-    display: block;
-    font: normal 1.2em "HarabaraRegular",Arial, Tahoma, sans-serif; 
-    letter-spacing:2px;
-    font-weight:normal;
-    padding: 5px 5px 0 5px;
-    text-align: center;   
-    margin: 0;
-    height:1.6em; 
-}
-
-.gigx-sponsors-slideshow-pagerbutton a:hover {
-    text-decoration: none;
+#slider1 {
+width: 840px;
+  	margin: 0 auto 0 auto;  
+padding:0;
 }
 
 
-.gigx-sponsors-slideshow-pager li.activeSlide {
-    background: no-repeat scroll right top #83AE2C;
-    color: #fff;
-    font-weight: bold;
+/*
+ * To change the color scheme of slider change each 
+ * background property for each of the five styles below
+ */
+
+/*next button*/
+.bx-next {
+	position:absolute;
+	top:35%;
+	right:-50px;
+	z-index:999;
+	width: 30px;
+	height: 30px;
+	text-indent: -999999px;
+	background: url(white_next.png) no-repeat 0 -30px;
 }
 
-/* jquery.clickable styling */
-.jsClickable {
-    cursor: pointer;
+/*previous button*/
+.bx-prev {
+	position:absolute;
+	top:35%;
+	left:-50px;
+	z-index:999;
+	width: 30px;
+	height: 30px;
+	text-indent: -999999px;
+	background: url(white_prev.png) no-repeat 0 -30px;
 }
+
+/*pager links*/
+.bx-pager a {
+	margin-right: 5px;
+	color: #fff;
+	padding: 3px 8px 3px 6px;
+	font-size: 12px;
+	zoom:1;
+	background: url(gray_pager.png) no-repeat 0 -20px;
+}
+
+/*auto start button*/
+.bx-auto .start {
+	background: url(gray_auto.png) no-repeat 0 2px;
+	padding-left: 13px;
+}
+
+/*auto stop button*/
+.bx-auto .stop {
+	background: url(gray_auto.png) no-repeat 0 -14px;
+	padding-left: 13px;
+}
+
+/*
+ * End color scheme styles
+ */
+
+
+/*next/prev button hover state*/
+.bx-next:hover,
+.bx-prev:hover {
+	background-position: 0 0;
+}
+
+/*pager links hover and active states*/
+.bx-pager .pager-active,
+.bx-pager a:hover {
+	background-position: 0 0;
+}
+
+/*pager wrapper*/
+.bx-pager {
+	text-align:center;
+	padding-top: 7px;
+	font-size:12px;
+	color:#666;
+}
+
+/*captions*/
+.bx-captions {
+	text-align:center;
+	font-size: 12px;
+	padding: 7px 0;
+	color: #666;
+}
+
+/*auto controls*/
+.bx-auto {
+	text-align: center;
+	padding-top: 15px;
+}
+
+.bx-auto a {
+	color: #666;
+	font-size: 12px;
+}
+
+
+
+
 
 /* TipTip CSS - Version 1.2 */
 
@@ -164,8 +191,8 @@ float:left;
 	text-shadow: 0 0 2px #000;
 	padding: 4px 8px;
 	border: 1px solid rgba(255,255,255,0.25);
-	background-color: rgb(25,25,25);
-	background-color: rgba(25,25,25,0.92);
+	background: rgb(25,25,25);
+	background: rgba(25,25,25,0.92);
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(transparent), to(#000));
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
