--- a/css/style.css
+++ b/css/style.css
@@ -8,24 +8,37 @@ CSS for the gallery widget
     clear: both;
     width: 100%;
     background-color:#486D25;
-    padding:0px 10px 20px 10px; 
+    padding:10px 10px 20px 10px; 
     border-radius: 5px;
     -moz-border-radius: 5px;    
     -moz-box-shadow: 5px 5px 5px #333; 
     -webkit-box-shadow: 5px 5px 5px #333; 
     box-shadow: 5px 5px 5px #333;
-    background-image: -moz-linear-gradient(top, #445533, #56822c); 
-    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #445533),color-stop(1, #56822c)); 
+    background-image: -moz-linear-gradient(top, #56822c, #445533); 
+    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #56822c),color-stop(1, #445533)); 
 display: none;       
+}   
+.gigx-sponsors-slideshow a {
+   outline: 0;
 }
 
 .gigx-sponsors-slideshow .widget-title{
-text-align:right;
+text-align:left;
 font-family: 'HarabaraRegular',Arial,sans-serif;
 	font-size: 20px;
 	text-decoration: none;
   letter-spacing: 2px;
   background-color: transparent;
+    border-radius: 0;
+    -moz-border-radius: 0;    
+    -moz-box-shadow: none; 
+    -webkit-box-shadow: none; 
+    box-shadow: 0;
+    background-image: none; 
+width:auto;
+position:inline;
+top:0;                       
+margin-bottom: 10px;
   
 }
 .gigx-sponsors-slideshow-wrapper {
