white box with green buttons style

--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,9 @@ CSS for the gallery widget
 .gigx-sponsors-slideshow{
     clear: both;
     width: 100%;
-    background-color:#486D25;
-    padding:10px 10px 20px 10px; 
-    border-radius: 5px;
-    -moz-border-radius: 5px;    
-    -moz-box-shadow: 5px 5px 5px #333; 
-    -webkit-box-shadow: 5px 5px 5px #333; 
-    box-shadow: 5px 5px 5px #333;
-    background-image: -moz-linear-gradient(top, #56822c, #445533); 
-    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #56822c),color-stop(1, #445533)); 
+
+    padding:0; 
+
 display: none;       
 }   
 .gigx-sponsors-slideshow a {
@@ -23,31 +17,29 @@ display: none;
 }
 
 .gigx-sponsors-slideshow .widget-title{
-text-align:left;
-font-family: 'HarabaraRegular',Arial,sans-serif;
-	font-size: 20px;
-	text-decoration: none;
-  letter-spacing: 2px;
-  background-color: transparent;
-    border-radius: 0;
-    -moz-border-radius: 0;    
-    -moz-box-shadow: none; 
-    -webkit-box-shadow: none; 
-    box-shadow: 0;
-    background-image: none; 
-width:auto;
-position:inline;
-top:0;                       
-margin-bottom: 10px;
+z-index: 1;
   
 }
 .gigx-sponsors-slideshow-wrapper {
+background-color:#fff;
+color:#333333;
+    border-radius: 5px;
+    -moz-border-radius: 5px;    
+    -moz-box-shadow: 5px 5px 5px #333; 
+    -webkit-box-shadow: 5px 5px 5px #333; 
+    box-shadow: 5px 5px 5px #333;
+    background-image: -moz-linear-gradient(top, #fafafa, #fff); 
+    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #fafafa),color-stop(1, #fff)); 
+    margin: 0 10px; 
+    padding: 10px 0;   
+}
+.gigx-sponsors-slideshow-inner-wrapper {
   	margin: 0 auto 0 auto;  
     padding: 0; 
     text-align: center;
     width: 840px;
-    
-}
+}    
+
 .gigx-sponsors-slideshow-wrapper li{
 margin:0;
 padding:0;
@@ -87,7 +79,7 @@ padding:0;
 	width: 30px;
 	height: 30px;
 	text-indent: -999999px;
-	background: url(white_next.png) no-repeat 0 -30px;
+	background: url(green_next.png) no-repeat 0 -30px;
 }
 
 /*previous button*/
@@ -99,7 +91,7 @@ padding:0;
 	width: 30px;
 	height: 30px;
 	text-indent: -999999px;
-	background: url(white_prev.png) no-repeat 0 -30px;
+	background: url(green_prev.png) no-repeat 0 -30px;
 }
 
 /*pager links*/
