fixed css bug in green_next, changed link title to textarea

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ GIGX Sponsors Slides CSS
 	width: 30px;
 	height: 30px;
 	text-indent: -999999px;
-	background: url(..images/green_next.png) no-repeat 0 -30px;
+	background: url(../images/green_next.png) no-repeat 0 -30px;
 }
 
 /*previous button*/
