--- a/css/gigx-sponsors-slides-sort.css
+++ b/css/gigx-sponsors-slides-sort.css
@@ -2,7 +2,8 @@
  
 	#gigx-sponsors-slides-list li {
 		padding: 10px;	
-		width: 50%;	
+		width: 50%;
+    height:28px;	
 		font-weight: bold;
  
 		background: #f0f0f0; /* for non-css3 browsers */
